Aligned picture and Text next to eachother

--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style/index.css">
-    <title>Document</title>
+    <title>William Hine Portfolio</title>
 </head>
 <body>
-    
+   
+<h1 id="name">William Hine</h1>
+<nav>
+    <a  href="#" class="navButton">Home</a>
+    <a href="#" class="navButton">About</a>
+    <a href="#" class="navButton">Contact</a>
+    <a href="#" class="navButton">Projects</a>
+</nav>
+
+<div class="mainContainer">
+        <div>
+            <img src="images/sandTitle.jpg" alt="Picture of Sand" class="topImage">
+        </div>
+        <div class="test">
+            <h2 class="subHeader">William Hine</h2><br>
+            <!-- <button type="button">My projects</button> -->
+            <h4 class="projectButton">Projects</h4><br>
+            <p class="projectText">Heare are some words about me and my journey in coding so far. These words are authentic and inspiring. These words tell my story</p>
+        </div>
+</div>
+
+<section>
+    <img src="images/sandTitle.jpg" alt="Picture of Sand">
+    <h4>Project Name</h4>
+    <img src="images/sandTitle.jpg" alt="Picture of Sand">
+    <h4>Project Name</h4>
+    <img src="images/sandTitle.jpg" alt="Picture of Sand">
+    <h4>Project Name</h4>
+    <img src="images/sandTitle.jpg" alt="Picture of Sand">
+    <h4>Project Name</h4>
+    <img src="images/sandTitle.jpg" alt="Picture of Sand">
+    <h4>Project Name</h4>
+    <img src="images/sandTitle.jpg" alt="Picture of Sand">
+    <h4>Project Name</h4>
+    <img src="images/sandTitle.jpg" alt="Picture of Sand">
+    <h4>Project Name</h4>
+    <img src="images/sandTitle.jpg" alt="Picture of Sand">
+    <h4>Project Name</h4>
+
+</section>
+<footer>
+    <h2>Like what you see?</h2>
+    <button type="button">Contact Me</button>
+</footer>
 </body>
 </html>
