--- a/index.html
+++ b/index.html
@@ -4,52 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style/index.css">
+    <!-- Added google font for h1 -->
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <title>William Hine Portfolio</title>
 </head>
 <body>
    
-<h1 id="name">William Hine</h1>
+<h1>William Hine</h1>
 <nav>
-    <a  href="#" class="navButton">Home</a>
-    <a href="#" class="navButton">About</a>
-    <a href="#" class="navButton">Contact</a>
-    <a href="#" class="navButton">Projects</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact Me</a>
+    <a href="projects.html">Projects</a>
 </nav>
+<br>
+<br>
+<br>
+<section class="mainSection">
+    <img src="images/sandTitle.jpg" />
 
-<div class="mainContainer">
-        <div>
-            <img src="images/sandTitle.jpg" alt="Picture of Sand" class="topImage">
+    <div class="introduction">
+      <h2>William Hine</h2>
+      <br>
+        <div class="myButton">
+            <button><a href="projects.html">My Projects</a></button>
+            
         </div>
-        <div class="test">
-            <h2 class="subHeader">William Hine</h2><br>
-            <!-- <button type="button">My projects</button> -->
-            <h4 class="projectButton">Projects</h4><br>
-            <p class="projectText">Heare are some words about me and my journey in coding so far. These words are authentic and inspiring. These words tell my story</p>
+        <br>
+        <div class="about">
+            <p>
+            My name is William Hine. This is my portfolio page to show
+            off all the projects I created in my time at Lambda School.
+            I hope from what I learn at Lambda School, I will be able to get a job
+            as a fullstack web developer. 
+            </p>
         </div>
-</div>
-
-<section>
-    <img src="images/sandTitle.jpg" alt="Picture of Sand">
-    <h4>Project Name</h4>
-    <img src="images/sandTitle.jpg" alt="Picture of Sand">
-    <h4>Project Name</h4>
-    <img src="images/sandTitle.jpg" alt="Picture of Sand">
-    <h4>Project Name</h4>
-    <img src="images/sandTitle.jpg" alt="Picture of Sand">
-    <h4>Project Name</h4>
-    <img src="images/sandTitle.jpg" alt="Picture of Sand">
-    <h4>Project Name</h4>
-    <img src="images/sandTitle.jpg" alt="Picture of Sand">
-    <h4>Project Name</h4>
-    <img src="images/sandTitle.jpg" alt="Picture of Sand">
-    <h4>Project Name</h4>
-    <img src="images/sandTitle.jpg" alt="Picture of Sand">
-    <h4>Project Name</h4>
-
-</section>
-<footer>
-    <h2>Like what you see?</h2>
-    <button type="button">Contact Me</button>
-</footer>
+    </div>
+  </section>
+<br>
+  <div class="container">
+    <div>
+     <img class="item" src="images/smallsand.jpg"/>
+     <figcaption><a class="links" href="#" >Project 1</a></figcaption>
+     </div>
+     <div>
+     <img class="item" src="images/smallsand.jpg"/>
+     <figcaption><a href="#" >Project 2</a></figcaption>
+     </div>
+     <div>
+     <img class="item" src="images/smallsand.jpg"/>
+     <figcaption><a href="#" >Project 3</a></figcaption>
+     </div>
+     <div>
+     <img class="item" src="images/smallsand.jpg"/>
+     <figcaption><a href="#" >Project 4</a></figcaption>
+     </div>
+     <div>
+     <img class="item" src="images/smallsand.jpg"/>
+     <figcaption><a href="#" >Project 5</a></figcaption>
+    </div>
+    <div>
+     <img class="item" src="images/smallsand.jpg"/>
+     <figcaption><a href="#" >Project 6</a></figcaption>
+     </div>
+     <div>
+     <img class="item" src="images/smallsand.jpg"/>
+     <figcaption><a href="#" >Project 7</a></figcaption>
+     </div>
+     <div>
+     <img class="item" src="images/smallsand.jpg"/>
+     <figcaption><a href="#" >Project 8</a></figcaption>
+     </div>
+     
+  </div>
+<br>
+<br>
+<br>
+<hr>
+  <footer>
+    <nav class="footerNav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact Me</a>
+        <a href="projects.html">Projects</a>
+        <a href="https://twitter.com/explore">Twitter</a>
+    </nav>
+  </footer>
 </body>
 </html>
