--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="images/sandTitle.jpg" />
 
     <div class="introduction">
-      <h2>William Hine</h2>
+      <h2 class="name">William Hine</h2>
       <br>
         <div class="myButton">
             <button><a href="projects.html">My Projects</a></button>
@@ -50,31 +50,31 @@
      </div>
      <div>
      <img class="item" src="images/smallsand.jpg"/>
-     <figcaption><a href="#" >Project 2</a></figcaption>
+     <figcaption><a class="links" href="#" >Project 2</a></figcaption>
      </div>
      <div>
      <img class="item" src="images/smallsand.jpg"/>
-     <figcaption><a href="#" >Project 3</a></figcaption>
+     <figcaption><a class="links" href="#" >Project 3</a></figcaption>
      </div>
      <div>
      <img class="item" src="images/smallsand.jpg"/>
-     <figcaption><a href="#" >Project 4</a></figcaption>
+     <figcaption><a class="links" href="#" >Project 4</a></figcaption>
      </div>
      <div>
      <img class="item" src="images/smallsand.jpg"/>
-     <figcaption><a href="#" >Project 5</a></figcaption>
+     <figcaption><a class="links" href="#" >Project 5</a></figcaption>
     </div>
     <div>
      <img class="item" src="images/smallsand.jpg"/>
-     <figcaption><a href="#" >Project 6</a></figcaption>
+     <figcaption><a class="links" href="#" >Project 6</a></figcaption>
      </div>
      <div>
      <img class="item" src="images/smallsand.jpg"/>
-     <figcaption><a href="#" >Project 7</a></figcaption>
+     <figcaption><a class="links" href="#" >Project 7</a></figcaption>
      </div>
      <div>
      <img class="item" src="images/smallsand.jpg"/>
-     <figcaption><a href="#" >Project 8</a></figcaption>
+     <figcaption><a class="links" href="#" >Project 8</a></figcaption>
      </div>
      
   </div>
